--- a/css/styles.css
+++ b/css/styles.css
@@ -60,10 +60,14 @@ body {
   text-decoration: none;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--slate);
 }
 .contacts-link:hover {
-  color: var(--iris);
+  color: var(--ocean);
+}
+.contacts-link:focus {
+  color: var(--ocean);
 }
 .hero {
   padding: 188px 0;
@@ -73,6 +77,7 @@ body {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  text-align: center;
   color: var(--white);
 }
 .button {
@@ -151,7 +156,8 @@ button:focus {
   letter-spacing: 0.02em;
   color: var(--slate);
 }
-.titile-text {
+.title-text {
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -165,6 +171,7 @@ button:focus {
   background-color: var(--cloud);
   cursor: pointer;
   border: none;
+  text-decoration: none;
 }
 .button-link:hover {
   color: var(--white);
