--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ button:focus {
   text-transform: capitalize;
   color: var(--navi-blue);
 }
-.taem-title {
+.team-title {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
