--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
 .list {
   list-style: none;
 }
+/**-----logo-----*/
 .logo-web {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -39,6 +40,7 @@ body {
   text-transform: uppercase;
   color: var(--navi-blue);
 }
+/**----menu----*/
 .menu {
   font-weight: 500;
   color: var(--navi-blue);
@@ -69,6 +71,7 @@ body {
 .contacts-link:focus {
   color: var(--ocean);
 }
+/**----hero----*/
 .hero {
   padding: 188px 0;
   background: var(--navi-blue);
@@ -94,7 +97,7 @@ button:focus {
   color: var(--white);
   background: var(--ocean);
 }
-
+/**----projects----*/
 .projects-title {
   font-size: 36px;
   line-height: 1.11;
@@ -111,7 +114,7 @@ button:focus {
   text-transform: capitalize;
   color: var(--navi-blue);
 }
-
+/**----footer----*/
 .footer {
   background-color: var(--navi-blue);
 }
@@ -143,6 +146,7 @@ button:focus {
   letter-spacing: 0.02em;
   color: var(--cornflower);
 }
+/**----other----*/
 .btn {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -176,11 +180,4 @@ button:focus {
 .button-link:hover {
   color: var(--white);
   background-color: var(--ocean);
-}
-.banking-app {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--navi-blue);
 }
