--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ address {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid var(--cornflower);
 }
 .header-nav {
   display: flex;
@@ -211,6 +212,8 @@ button:focus {
   background-color: var(--white);
 }
 .team-name {
+  display: flex;
+  justify-content: center;
   margin: 0 49px 8px;
 }
 .team-img {
@@ -218,6 +221,8 @@ button:focus {
   padding-bottom: 32px;
 }
 .team-position {
+  display: flex;
+  justify-content: center;
   padding-left: 52px;
   padding-right: 52px;
   padding-top: 0;
@@ -289,11 +294,12 @@ button:focus {
 }
 .section-button {
   display: flex;
-  align-items: center;
+  justify-content: center;
   gap: 24px;
 }
 
 .button-link {
+  padding: 12px 24px;
   border-radius: 4px;
   color: var(--iris);
   background-color: var(--cloud);
