--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,6 @@ address {
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
-  padding-left: 472px;
-  padding-right: 472px;
   background: var(--navi-blue);
 }
 .hero-title {
@@ -164,7 +162,9 @@ button:focus {
   display: flex;
   gap: 24px;
 }
-
+.features-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
 .features-title {
   margin-top: 0;
   margin-bottom: 8px;
@@ -177,6 +177,9 @@ button:focus {
 }
 .projects {
   padding-top: 0;
+}
+.projects-item {
+  flex-basis: calc((100% - 48px) / 3);
 }
 .projects-title {
   margin-top: 0;
@@ -305,24 +308,19 @@ button:focus {
 .projectcard {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 0;
+  gap: 48px 20px;
+
   margin-top: 72px;
 }
 .projectcard-item {
-  width: 360px;
-  height: 420px;
+  flex-basis: auto;
   border: 1px solid var(--cornflower);
 }
 
 .projectcard-img {
   flex-basis: calc((100% - 216px) / 9);
 }
-.projectcard-position {
-  margin-left: 16px;
-  margin-top: 0;
-  margin-bottom: 32px;
-}
+
 .element-style {
   padding: 32px 16px;
 }
