--- a/css/styles.css
+++ b/css/styles.css
@@ -118,16 +118,18 @@ address {
   color: var(--navi-blue);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
+  padding-bottom: 33px;
 }
 .menu-item-link.current {
   color: var(--ocean);
 }
 
-.menu-item-link.current ::after {
+.menu-item-link.current::after {
   content: "";
   display: block;
   position: absolute;
   transform: translateY(-125%);
+
   bottom: 0;
   left: 0;
   width: 100%;
