--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ address {
 .menu-item-link {
   text-decoration: none;
   color: var(--navi-blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms color cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   padding-bottom: 33px;
 }
@@ -140,14 +140,11 @@ address {
 
 .menu-item-link:hover {
   color: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-item-link:focus {
   color: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address {
   font-style: normal;
 }
@@ -159,18 +156,15 @@ address {
   letter-spacing: 0.02em;
   color: var(--slate);
   margin-left: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover {
   color: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:focus {
   color: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts {
@@ -182,7 +176,7 @@ address {
 /**----hero----*/
 .hero {
   background-color: var(--navi-blue);
-  height: 600px;
+  margin: 0 auto;
   max-width: 1440px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -214,23 +208,19 @@ address {
   display: block;
   margin: 48px auto 0;
   border: none;
-
   width: 169px;
   height: 56px;
+  transition: color, background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
   color: var(--white);
   background-color: var(--iris);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 button:focus {
   color: var(--white);
   background: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /**----features----*/
@@ -302,6 +292,12 @@ button:focus {
   padding-bottom: 120px;
   background-color: var(--cloud);
 }
+.team-name {
+  margin-bottom: 8px;
+}
+.team-position {
+  margin-bottom: 8px;
+}
 
 .team-title {
   margin-top: 0;
@@ -312,7 +308,6 @@ button:focus {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--navi-blue);
-  margin-bottom: 20px;
 }
 
 .team-item {
@@ -343,16 +338,15 @@ button:focus {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:hover {
-  background: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--ocean);
 }
 
 .customers {
-  margin: 120px 156px;
+  margin: 120px 0 72px 0;
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
@@ -379,16 +373,15 @@ button:focus {
   color: var(--light-slate);
   border-color: var(--light-slate);
   width: 100%;
-  height: 100%;
+  height: 88px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: border, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-item-link:hover {
   color: var(--ocean);
   border-color: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-btn {
@@ -456,24 +449,23 @@ button:focus {
 }
 
 .social-link {
+  display: flex;
+}
+.social-link-item {
+  display: flex;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background: var(--slate);
-  display: flex;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
   justify-content: center;
 }
 
-.social-link:hover {
+.social-link-item:hover {
   background: var(--green);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link-item {
-  height: 24px;
-}
 /**----other----*/
 .btn {
   font-family: "Roboto", sans-serif;
@@ -517,13 +509,15 @@ button:focus {
   background-color: var(--cloud);
   cursor: pointer;
   text-decoration: none;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  transition: background, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-link:hover {
   color: var(--white);
   background-color: var(--ocean);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projectcard {
@@ -538,10 +532,7 @@ button:focus {
   border: 1px solid var(--cornflower);
 }
 .projectcard-item:hover .projectcard-img-text {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projectcard-top {
   position: relative;
@@ -549,8 +540,8 @@ button:focus {
 }
 .projectcard-img-text {
   position: absolute;
-  width: 360px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   left: 0px;
   top: 0px;
   font-weight: 400;
@@ -560,9 +551,12 @@ button:focus {
   color: var(--cloud);
   background: var(--iris);
   padding: 40px;
-  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
   transform: translateY(100%);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .projectcard-img {
@@ -582,9 +576,10 @@ button:focus {
   transition: opacity 300ms linear, visibility 300ms linear;
 }
 
-.model {
+.modal {
   position: absolute;
-  width: 408px;
+  max-width: 408px;
+  width: 100%;
   min-height: 576px;
   background: var(--dairy);
   border-radius: 4px;
@@ -596,11 +591,11 @@ button:focus {
   padding: 24px;
 }
 
-.backdrop .is-hidden .model {
+.backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0);
 }
 
-.model-close {
+.modal-close {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -611,20 +606,17 @@ button:focus {
   border-radius: 50%;
   border: 1px solid rgba(46, 47, 66, 0.1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
-.model-close:hover {
+.modal-close:hover {
   fill: var(--white);
   background-color: var(--ocean);
-  border: 1px solid rgba(46, 47, 66, 0.1);
 }
 
-.model-close:focus {
+.modal-close:focus {
   fill: var(--white);
   background-color: var(--ocean);
-  border: 1px solid rgba(46, 47, 66, 0.1);
 }
 
 .is-hidden {
