--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,6 @@ button:focus {
 
 /**----features----*/
 .icon {
-  width: 264px;
   height: 112px;
   display: flex;
   justify-content: center;
@@ -466,6 +465,80 @@ button:focus {
   background: var(--green);
 }
 
+.subscribe {
+  margin-left: 80px;
+  display: block;
+}
+
+.subscribe-form {
+  margin-top: 0em;
+}
+
+.subscribe-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-bottom: 16px;
+  color: var(--white);
+  margin: 0;
+}
+
+.subscribe-section {
+  display: flex;
+}
+
+.subscribe-input {
+  font-family: "Roboto";
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: var(--white);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 0 16px 0 16px;
+  height: 40px;
+  width: 264px;
+  background-color: transparent;
+  outline: 0;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-button {
+  display: flex;
+  padding: 8px 24px;
+  border-radius: 4px;
+  border: 0;
+  cursor: pointer;
+  margin-left: 24px;
+  background: var(--iris);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: var(--ocean);
+}
+
+.subscribe-submit {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white);
+  margin-right: 16px;
+  padding: 0;
+  border: none;
+}
+
+.subscribe-svg {
+  height: 24px;
+  width: 24px;
+  color: var(--white);
+}
+
 /**----other----*/
 .btn {
   font-family: "Roboto", sans-serif;
@@ -577,7 +650,8 @@ button:focus {
 }
 
 .modal {
-  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 408px;
   width: 100%;
   min-height: 576px;
@@ -589,10 +663,12 @@ button:focus {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 300ms linear;
   padding: 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0.8);
 }
 
 .modal-close {
@@ -617,6 +693,117 @@ button:focus {
 .modal-close:focus {
   fill: var(--white);
   background-color: var(--ocean);
+}
+.modal-form {
+  width: 360px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.modal-title {
+  padding-top: 48px;
+  padding-bottom: 16px;
+}
+.modal-list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 8px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
+  border: none;
+}
+.modal-list input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+
+  border-radius: 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 38px;
+}
+.coment {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
+  margin-top: 8px;
+}
+.text-comment-input {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: transparent;
+  background-color: transparent;
+  resize: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.checkbox {
+  box-sizing: border-box;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #2e2f42;
+  border-radius: 2px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.accept {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
+}
+.text-comment-input:focus .text-comment-input:active {
+  border: 1px solid var(--accent-color);
+}
+
+.groups {
+  display: flex;
+  flex-direction: column;
+}
+.privacy {
+  color: var(--iris);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.button-send {
+  margin-top: 24px;
+  background-color: var(--iris);
+  color: var(--white);
+  cursor: pointer;
+  display: block;
+  margin: 48px auto 0;
+  border: none;
+  width: 169px;
+  height: 56px;
+  transition: color, background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-send:hover {
+  color: var(--white);
+  background-color: var(--iris);
+}
+
+.button-send:focus {
+  color: var(--white);
+  background: var(--ocean);
 }
 
 .is-hidden {
