--- a/css/styles.css
+++ b/css/styles.css
@@ -703,7 +703,29 @@ button:focus {
   padding-top: 48px;
   padding-bottom: 16px;
 }
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--navi-blue);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+}
+.modal-input :focus {
+  border-color: var(--iris);
+}
+.modal-input:focus + .input-icon {
+  fill: var(--iris);
+}
 .modal-list {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 8px;
@@ -713,6 +735,7 @@ button:focus {
   letter-spacing: 0.04em;
   color: var(--light-slate);
   border: none;
+  margin-bottom: 30px;
 }
 .modal-list input {
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -722,6 +745,13 @@ button:focus {
   padding-bottom: 8px;
   padding-left: 38px;
 }
+.input-icon {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .coment {
   font-weight: 400;
   font-size: 12px;
@@ -742,13 +772,6 @@ button:focus {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-}
-.placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
 }
 
 .checkbox {
